Working version with modification of internal representation of pixels. The internal representation of the DSM map in the Dsm Information class is that the south-west (down-left) pixel is (0,0), and all the pixels are positive, and therefore, pixel in the north-east (up-right) is (Columns-1, Rows-1), where Columns is the total number of columns of the DSM file, and Rows is the total number of rows of the DSM file

--- a/PabloAIHomeExercise.Rmd
+++ b/PabloAIHomeExercise.Rmd
@@ -216,7 +216,7 @@ CalculateNextLocation3 = function(TargetCurrentLocation, OtherFollowerCurrentLoc
 
 ```{r}
 # view raster attributes
-DsmTestRaster   <- raster("/home/pablo/Documents/Software Engineering/AI home exercise/Solution/test.tif")
+DsmTestRaster   <- raster("/home/pablo/Documents/Software Engineering/AI home exercise/Solution/output/Model.tif")
 plot(DsmTestRaster)
 ```
 
