--- a/PabloAIHomeExercise.Rmd
+++ b/PabloAIHomeExercise.Rmd
@@ -13,18 +13,18 @@ output:   html_document
 -   [GeoTIFF](https://en.wikipedia.org/wiki/GeoTIFF)
 
 ## Task objective: double tracking
--   The idea of this task is to create an algorithm that allows the continuous tracking after the person - "target" - by a couple of followers
+-   The idea of this home exercise is to create an algorithm that allows the continuous tracking after the person - "target" - by a couple of agents
 -   Given a DSM (Digital Surface Model) building's map - 100 [m] x 100 [m] matrix ????
 -   Given the "target" maximum speed as 1 meter/second in a not known in advance route. The "target movement is limited only to "ground" level
--   Given the "followers" speed as 2 meters/second, and are only allowed to be as close as 10 meters (no less than this) from the "target". The "followers" movement is also limited to "ground" level
--   The task objective is to create an algorithm that once in a second, gives us the "target" and "followers" position given the limitations above, and issues instructions to the "followers" next movement in order that at least one of the "followers" could have "eye-contact" as much as possible with the "target"
+-   Given the "agents" speed as 2 meters/second, and are only allowed to be as close as 10 meters (no less than this) from the "target". The "agents" movement is also limited to "ground" level
+-   The home exercise objective is to create an algorithm that once in a second, gives us the "target" and "agents" position given the limitations above, and issues instructions to the "agents" next movement in order that at least one of the "agents" could have "eye-contact" as much as possible with the "target"
 
 ## Clarifications from Yair email (2021-02-21)
 -   Work with the DSM with the size 'as is' 351x201 pixels 
 -   One pixel equals to one meter
 -   The target is supposed to have constant rate (1 meter/second) and could NOT stop
--   The follower agent could also stop or up to 2 meters/second (0 meters/second, 1 meter/second, 2 meters/second)
--   Starting points for the target and follower agents could be in every place but NOT in a "obstacle" level (NOT "ground" level)
+-   The agent could also stop or up to 2 meters/second (0 meters/second, 1 meter/second, 2 meters/second)
+-   Starting points for the target and agents could be in every place but NOT in a "obstacle" level (NOT "ground" level)
 -   The agents will have LOS with the "target" in the first simulation cycle
 
 
@@ -165,90 +165,70 @@ print (plot)
 -   Map for every pixel at "ground" level, all the pixels that are inside the LOS
 -   Take a few locations in the DSM and show the results in it
 
-##    Working with "only" one follower
--   Write a function that will return the progress command to the follower given his and the "target" current locations: __CalculateNextLocation(TargetCurrentLocation, FollowerCurrentLocation)__
--   Progress command will take in account the potential next location of both the "target" and the "follower" so that will have LOS between "follower" and "target" as much as possible time
+##    Working with "only" one agent
+-   Write a function that will return the progress command to the agent given his and the "target" current locations: __CalculateNextLocation(TargetCurrentLocation, FollowerCurrentLocation)__
+-   Progress command will take in account the potential next location of both the "target" and the "agent" so that will have LOS between "agent" and "target" as much as possible time
 
 ```{r}
 
 
 
-CalculateNextLocation = function(TargetCurrentLocation, FollowerCurrentLocation)
+CalculateNextLocation = function(TargetCurrentLocation, AgentCurrentLocation)
 {
-  return (FollowerNextLocation)
+  return (AgentNextLocation)
 }
 
 ```
 
 
-##    Working with a couple of followers - Central calculation
--   Like in the previous section, but the function should give guidance to both followers: __CalculateNextLocation2(TargetCurrentLocation, FollowerCurrentLocation)__
--   It is desirable that there will be some kind of coordination between both commands so that one follower will complement the other
+##    Working with a couple of agents - Central calculation
+-   Like in the previous section, but the function should give guidance to both agent: __CalculateNextLocation2(TargetCurrentLocation, AgentCurrentLocation)__
+-   It is desirable that there will be some kind of coordination between both commands so that one agent will complement the other
 
-```{r}
+##    Working with a couple of agents - Distributed calculation
+-   Write a function that will return the progress command to a __single__ agent given his, the second agent and the "target" current locations: __CalculateNextLocation3(TargetCurrentLocation, OtherAgentCurrentLocation, AgentCurrentLocation)__
+-   The functions (for each agent) are not related between them
+-   The functions will give guidance every 2 seconds, once the function will work with agent1, and the next second will work with agent2, therefore the function(s) won't work with the same input
+-   It is desirable that there will be some kind of coordination between both commands so that one agent will complement the other
 
-CalculateNextLocation2 = function(TargetCurrentLocation, FollowerCurrentLocation)
-{
-  return (FollowersNextLocation)
-}
+#   Solution
 
-```
-
-
-##    Working with a couple of followers - Distributed calculation
--   Write a function that will return the progress command to a __single__ follower given his, the second follower and the "target" current locations: __CalculateNextLocation3(TargetCurrentLocation, OtherFollowerCurrentLocation, FollowerCurrentLocation)__
--   The function (for each follower) are not related between them
--   The function will give guidance every 2 seconds, once the function will work with follower1, and the next second will work with follower2, therefore the function(s) won't work with the same input
--   It is desirable that there will be some kind of coordination between both commands so that one follower will complement the other
-
-
-```{r}
-
-
-CalculateNextLocation3 = function(TargetCurrentLocation, OtherFollowerCurrentLocation, FollowerCurrentLocation)
-{
-  return (FollowerNextLocation)
-}
-
-
-
-```
-
+##    1.1) Display the DSM file in Python / Matlab (in this case as .png file)
 ```{r}
 # view raster attributes
-#DsmTestRaster   <- raster("/home/pablo/Documents/Software Engineering/AI home exercise/Solution/output/Model.tif")
-#plot(DsmTestRaster)
+DsmTestRaster   <- raster("/home/pablo/Documents/Software Engineering/AI home exercise/Solution/output/1_2 2_DsmOriginalFile Target.tif")
+plot(DsmTestRaster)
 ```
+
+##    1.2.2) Display "target" path progress over time on map
+
+
+![](/home/pablo/Documents/Software Engineering/AI home exercise/Solution/output/target/target.gif)
+
+##    Bonus) Display "agent alone" path progress over time on map (to show different A* configuration)
+
+
+![](/home/pablo/Documents/Software Engineering/AI home exercise/Solution/output/agent/agent.gif)
+
+
+
+
+##    2.2) Take a number of DSM locations and display the LOS between them
+
+
+![](/home/pablo/Documents/Software Engineering/AI home exercise/Solution/output/losExample/losExample.gif)
+
+
+##   Algorithm for lonely agent following target
+-   Build a list of possible NEXT locations both for agent and target with SwissArmyKnife.PossibleMovements() given as input parameters: type of movement of person, current location and DSM map info, and receiving as output the list of possible NEXT movements
+
+-   Filter from this list only the locations that have LOS between agent and target and also that will be at a minimum distance of the ALLOWED distance (10 meters in this case) with SwissArmyKnife.PossibleLineOfSightLocations() given as input parameters: list of possible NEXT movements from both agent and target, DSM map info, and minimum ALLOWED distance between both agent and target. The output received from this function is a new list having all the possible NEXT movements for agent, that will have LOS with target caring for the minimum allowed distance
+
+-   Order the last list by minimum distance from target and quantity of potential LOS with target with the following functions: SwissArmyKnife.OrderInfoListByLos() and SwissArmyKnife.OrderInfoListByMinimumDistance(), in order to have priority (and use it) with the possible movement that will have the greater potential for LOS with target and minimum distance with it
+
+-   In case of LOS loss, need to have the last target position seen
+
+##    3)	Working with "only" one agent
+
 
 ![](/home/pablo/Documents/Software Engineering/AI home exercise/Solution/output/lonelyAgent/lonelyAgent.gif)
-
-```{r}
-#library(magick)
-#animatedGif = image_read("/home/pablo/Documents/Software Engineering/AI home exercise/Solution/output/lonelyAgent/lonelyAgent.gif")
-#image_display(animatedGif, animate = TRUE)
-#library(purrr)
-#list.files(path = "/home/pablo/Documents/Software Engineering/AI home exercise/Solution/output/lonelyAgent/", pattern = "*.png", full.names = T) %>% 
-#  map(image_read) %>% # reads each path file
-#  image_join() %>% # joins image
-#  image_animate(fps=2) %>% # animates, can opt for number of loops
-#  image_write("/home/pablo/Documents/Software Engineering/AI home #exercise/Solution/output/lonelyAgent/ndwi_aug_hgm.gif") # write to current dir
-#library(gifski)
-#png_files <- list.files("/home/pablo/Documents/Software Engineering/AI home exercise/Solution/output/lonelyAgent/", pattern = ".*png$", full.names = TRUE)
-#gifski(png_files, gif_file = "/home/pablo/Documents/Software Engineering/AI home exercise/Solution/output/agent/1_2_2_AgentOverTime.gif", width = 800, height = 600, delay = 1)
-#gifski(png_files, gif_file = "/home/pablo/Documents/Software Engineering/AI home exercise/Solution/output/lonelyAgent/1_2_2_AgentOverTime.gif",width = 800, height = 600,  delay = 0.07)
-
-# Algorithm for agent
-## Build a list of possible NEXT locations both for agent and target with SwissArmyKnife.PossibleMovements() given as input parameters: type of movement of person, current location and DSM map info, and receiving as output the list of possible NEXT movements
-## Filter from this list only the locations that have LOS between agent and target and also that will be at a minimum distance of the ALLOWED distance (10 meters in this case) with SwissArmyKnife.PossibleLineOfSightLocations() given as input parameters: list of possible NEXT movements from both agent and target, DSM map info, and minimum ALLOWED distance between both agent and target. The output received from this function is a new list having all the possible NEXT movements for agent, that will have LOS with target caring for the minimum allowed distance.
-## Order the last list by minimum distance from target and quantity of potential LOS with target with the following functions: SwissArmyKnife.OrderInfoListByLos() and SwissArmyKnife.OrderInfoListByMinimumDistance(), in order to have priority (and use it) with the possible movement that will have the greater potential for LOS with target and minimum distance with it.
-## In case of LOS loss, need to have the last target position seen.
-
-
-
-
-
-```
-
-
-
-
